@@ -1,6 +1,7 @@
 v0.9.5
 
 * [BGBUILD-294] Package aws-sdk 1.1.1 and update dependency
+* [BGBUILD-277] When delivering as AMI, the EC2 region should match S3 bucket's region (location constraint)
 
 v0.9.4
 
